--- a/src/main/resources/static/css/dark_theme.css
+++ b/src/main/resources/static/css/dark_theme.css
@@ -81,21 +81,42 @@ footer {
 }
 
 #app {
-    max-width: 800px;
+    max-width: 900px;
     margin: 20px auto;
     background: #121212;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-#movie-details {
-    margin-top: 20px;
+/*.movie-details {*/
+/*    display: flex;*/
+/*    align-items: flex-start;*/
+/*}*/
+
+.movie-content {
+    flex: 1;
+}
+
+.movie-info, .movie-reviews {
+    margin-bottom: 20px;
+}
+
+.movie-poster {
+    margin-left: 20px;
+    margin-top: 5px;
+    align-self: flex-start;
 }
 
 .movie {
     border: 1px solid #ccc;
     padding: 15px;
     margin-bottom: 20px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.poster {
+    border-radius: 6px;
 }
 
 .auth-info {
